--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "backups",
   "version": "1.0.0",
   "description": "backups description",
-  "main": "server.js",
+  "main": "server.js",a
   "scripts": {
     "test": "npm start"
   },
