--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
-/frontend/node_modules/
-/backend/node_modules/
-/backend/.env
+**/node_modules
+**.env
+.vscode/*
 /backend/env.example
-.vscode/launch.json
 practica/
-Sprint.txt
+to-do.txt
