--- a/backend/package.json
+++ b/backend/package.json
@@ -26,12 +26,12 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "4.19.2",
+    "express": "^4.21.2",
     "express-validator": "^7.1.0",
     "http-proxy-middleware": "^3.0.3",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.10.1",
-    "socket.io": "4.7.5"
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.3"
