--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "dotenv concurrently \"vite\" \"wait-on http://localhost:${VITE_FRONTENDPORT} && npx tailwindcss -i ./src/main.css -o ./src/output.css --watch\"",
+    "dev": "dotenv concurrently \"vite\" \"wait-on http://localhost:5173 && npx tailwindcss -i ./src/main.css -o ./src/output.css --watch\"",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
@@ -16,6 +16,7 @@
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
     "tailwind-scrollbar": "^3.1.0"
