--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,17 @@
-# Ignorar node_modules en todas las subcarpetas
+# ignore node_modules and dist in all folders
 **/node_modules
-
-# Ignorar archivos .env en todas las subcarpetas
+**/dist
+# ignore .env files but allows .env.example to be committed
 **/*.env
+!**/.env.example
 
-# Ignorar archivos específicos en la raíz
+# ignore some personal folders and files
 practica/
 to-do.txt
 /backend/db/tables_code.txt
 z_comm.txt
 z_aprender.txt
 z_tsnotes.txt
-
-# Ignorar archivos específicos en backend
-/backend/env.example
-/frontend/env.example
-Backups-home-dashboard.png
 
 # Logs
 logs/
