--- a/backend/package.json
+++ b/backend/package.json
@@ -2,10 +2,12 @@
   "name": "backups",
   "version": "1.0.0",
   "description": "",
-  "main": "server.ts",
+  "main": "./dist/server.js",
   "type": "module",
   "scripts": {
-    "start": "concurrently -k \"tsc --watch\" \"nodemon --exec tsx server.ts\"",
+    "dev": "tsx watch ./src/server.ts",
+    "build": "rimraf ./dist && tsc",
+    "start": "node ./dist/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -43,9 +45,10 @@
     "@typescript-eslint/parser": "^8.21.0",
     "concurrently": "^9.1.2",
     "eslint": "^9.18.0",
-    "nodemon": "^3.1.9",
+    "rimraf": "^6.0.1",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
-    "tsx": "^4.19.2"
+    "tsx": "^4.19.2",
+    "typescript": "^5.7.3"
   }
 }
