--- a/backend/package.json
+++ b/backend/package.json
@@ -2,12 +2,12 @@
   "name": "backups",
   "version": "1.0.0",
   "description": "",
-  "main": "./dist/server.js",
+  "main": "./dist/index.js",
   "type": "module",
   "scripts": {
-    "dev": "npx tsc --noEmit && tsx watch ./src/server.ts",
+    "dev": "npx tsc --noEmit && tsx watch ./src/index.ts",
     "build": "rimraf ./dist && tsc",
-    "start": "node ./dist/server.js",
+    "start": "node ./dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
