--- a/backend/package.json
+++ b/backend/package.json
@@ -31,9 +31,9 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.2",
     "express-validator": "^7.1.0",
-    "http-proxy-middleware": "^3.0.3",
+    "http-proxy-middleware": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
-    "multer": "^1.4.5-lts.1",
+    "multer": "^2.0.0",
     "mysql2": "^3.10.1",
     "socket.io": "^4.8.1",
     "streamifier": "^0.1.1"
@@ -48,6 +48,7 @@
     "@typescript-eslint/eslint-plugin": "^8.21.0",
     "@typescript-eslint/parser": "^8.21.0",
     "concurrently": "^9.1.2",
+    "esbuild": "^0.25.4",
     "eslint": "^9.18.0",
     "rimraf": "^6.0.1",
     "ts-node": "^10.9.2",
