--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -10,10 +10,10 @@
     "sourceMap": true,
     "rootDir": "./",
     "outDir": "./dist",
-    "types": ["jest", "node"],
     "resolveJsonModule": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
+    "types": ["vitest"],
     /* "module": "ESNext",
     "moduleResolution": "node",
     "target": "ES2022",
@@ -32,6 +32,6 @@
     "noUnusedLocals": true,
     "allowImportingTsExtensions": true, */ /* disable this for production */
   },
-  "include": ["src", "tests"], 
+  "include": ["src", "tests", "vitest.config.ts"], 
   "exclude": ["node_modules", "dist"]
 }
