--- a/backend/package.json
+++ b/backend/package.json
@@ -53,7 +53,6 @@
     "concurrently": "^9.1.2",
     "esbuild": "^0.25.4",
     "eslint": "^9.18.0",
-    "jest-mock-req-res": "^1.0.2",
     "rimraf": "^6.0.1",
     "supertest": "^7.1.4",
     "ts-node": "^10.9.2",
@@ -61,6 +60,7 @@
     "tsconfig-paths": "^4.2.0",
     "tsx": "^4.19.2",
     "typescript": "^5.7.3",
-    "vitest": "^3.2.4"
+    "vitest": "^3.2.4",
+    "vitest-mock-express": "^2.2.0"
   }
 }
