--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "react-icons": "^5.4.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
+    "recharts": "^3.1.2",
     "tailwind-scrollbar": "^3.1.0"
   },
   "devDependencies": {
