--- a/backend/env.example
+++ b/backend/env.example
@@ -4,8 +4,9 @@ JWT_SECRET=your access token secret
 JWT_REFRESH_SECRET=your refresh token secret
 NODE_ENV=dev or production, depending on your environment
 DB_HOST=host of your db
-DB_DATABASE=name of your db
+DB_SCHEMA=name of your db schema
 DB_USER=Your db username
+DB_PASSWORD=Your db password
 CLOUDINARY_NAME=your cloudinary name
 CLOUDINARY_API_KEY=your cloudinary api key
 CLOUDINARY_API_SECRET=your cloudinary api secret
