--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -33,5 +33,5 @@
     "allowImportingTsExtensions": true, */ /* disable this for production */
   },
   "include": ["src", "tests", "vitest.config.ts"], 
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules", "dist", "tests"]
 }
