--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,37 +1,27 @@
 {
   "compilerOptions": {
-    "baseUrl": "./src",
+    "baseUrl": ".",
     "paths": {
-      "@/*": ["*"]
+      "@/*": ["src/*"],
+      "@tests/*": ["tests/*"]
     },
     "module": "NodeNext",
-    "moduleResolution": "nodenext",
+    "moduleResolution": "NodeNext",
     "target": "ES2020",
     "sourceMap": true,
-    "rootDir": "./",
+    "rootDir": ".",
     "outDir": "./dist",
     "resolveJsonModule": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
-    "types": ["vitest"],
-    /* "module": "ESNext",
-    "moduleResolution": "node",
-    "target": "ES2022",
-    "strict": true,
-    
+    "types": ["vitest", "node"],
     "skipLibCheck": true,
+    "strict": true,
     "forceConsistentCasingInFileNames": true,
-    
-    "resolveJsonModule": true,
-    "rootDir": "./",
-    "outDir": "./dist",
     "declaration": true,
     "declarationMap": true,
-    "sourceMap": true,
-    "noEmit": true,
-    "noUnusedLocals": true,
-    "allowImportingTsExtensions": true, */ /* disable this for production */
+    "noUnusedLocals": true
   },
-  "include": ["src", "tests", "vitest.config.ts"], 
-  "exclude": ["node_modules", "dist", "tests"]
+  "include": ["src/**/*", "tests/**/*", "vitest.config.ts"],
+  "exclude": ["node_modules", "dist"]
 }
