--- a/backend/package.json
+++ b/backend/package.json
@@ -47,6 +47,7 @@
     "@types/express": "^5.0.0",
     "@types/multer": "^2.0.0",
     "@types/node": "^22.19.1",
+    "@types/streamifier": "^0.1.2",
     "@types/supertest": "^6.0.3",
     "@typescript-eslint/eslint-plugin": "^8.48.1",
     "@typescript-eslint/parser": "^8.48.1",
