--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,12 +6,14 @@
   "scripts": {
     "dev": "npx tsc --noEmit && concurrently \"vite\" \"wait-on http://localhost:5173 && npx tailwindcss -i ./src/main.css -o ./public/output.css --watch\"",
     "build": "vite build",
-    "start": "vite preview",
+    "preview": "cross-env NODE_ENV=preview vite preview",
     "lint": "eslint . --ext js,jsx,ts,tsx --report-unused-disable-directives --max-warnings 0",
     "test": "vitest",
     "test:ui": "vitest --ui"
   },
   "dependencies": {
+    "@cloudinary/react": "^1.14.3",
+    "@cloudinary/url-gen": "^1.22.0",
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.1.5",
     "@reduxjs/toolkit": "^2.3.0",
@@ -40,6 +42,7 @@
     "@vitejs/plugin-react-swc": "^3.5.0",
     "@vitest/coverage-v8": "^3.2.4",
     "concurrently": "^9.1.0",
+    "cross-env": "^10.1.0",
     "dotenv": "^16.4.7",
     "dotenv-cli": "^7.4.4",
     "eslint": "^8.57.0",
