--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "npx tsc --noEmit && concurrently \"vite\" \"wait-on http://localhost:5173 && npx tailwindcss -i ./src/main.css -o ./public/output.css --watch\"",
+    "dev": "vite",
     "build": "vite build",
     "preview": "cross-env NODE_ENV=preview vite preview",
     "lint": "eslint . --ext js,jsx,ts,tsx --report-unused-disable-directives --max-warnings 0",
@@ -41,6 +41,7 @@
     "@typescript-eslint/parser": "^8.48.1",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "@vitest/coverage-v8": "^3.2.4",
+    "autoprefixer": "^10.4.22",
     "concurrently": "^9.1.0",
     "cross-env": "^10.1.0",
     "dotenv": "^16.4.7",
@@ -51,6 +52,7 @@
     "eslint-plugin-react-refresh": "^0.4.7",
     "eslint-plugin-vitest": "^0.5.4",
     "jsdom": "^26.1.0",
+    "postcss": "^8.5.6",
     "tailwindcss": "^3.4.14",
     "typescript": "^5.9.3",
     "vite": "^6.3.4",
