Implementing axios and tanstack query pt1

--- a/frontend/env.example
+++ b/frontend/env.example
@@ -1,3 +1,8 @@
-VITE_FRONTENDPORT=Your vite port
-VITE_BACKENDPORT=Your backend port
-CLOUDINARY_NAME=CLOUDINARY_NAME
+# Cloudinary
+VITE_CLOUDINARY_NAME=
+
+# Tanstack Query config
+# Choose development or production for query stale time
+VITE_QUERY_ENV=
+# For production, change to your production backend URL
+VITE_API_BASE_URL=
