Auth migration using BetterAuth & Prisma

--- a/backend/package.json
+++ b/backend/package.json
@@ -25,8 +25,10 @@
   },
   "homepage": "https://github.com/AgustinHDS/chatLive_node#readme",
   "dependencies": {
+    "@prisma/client": "^5.22.0",
     "@types/jsonwebtoken": "^9.0.10",
     "bcrypt": "^5.1.1",
+    "better-auth": "^1.4.9",
     "cloudinary": "^2.5.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -37,6 +39,7 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.0",
     "mysql2": "^3.10.1",
+    "prisma": "^5.22.0",
     "socket.io": "^4.8.1",
     "streamifier": "^0.1.1"
   },
