--- a/backend/env.example
+++ b/backend/env.example
@@ -1,12 +1,33 @@
-PORT_FRONTEND=your frontend port
-PORT_BACKEND=your backend port
-JWT_SECRET=your access token secret
-JWT_REFRESH_SECRET=your refresh token secret
-NODE_ENV=dev or production, depending on your environment
-DB_HOST=host of your db
-DB_SCHEMA=name of your db schema
-DB_USER=Your db username
-DB_PASSWORD=Your db password
+# Ports
+PORT_FRONTEND=5173
+PORT_BACKEND=3001
+
+# Environment
+NODE_ENV=dev # or production
+
+# Database Configuration (MySQL)
+# Used by Prisma / BetterAuth
+DATABASE_URL=mysql://DB_USER:DB_PASSWORD@DB_HOST:3306/DB_SCHEMA
+
+# Used by legacy mysql2 connection
+DB_HOST=localhost
+DB_SCHEMA=backups
+DB_USER=root
+DB_PASSWORD=root
+
+# BetterAuth Secret
+# Generate a secure random string of at least 32 characters
+# Example:
+# node -e "console.log(require('crypto').randomBytes(32).toString('base64'))"
+BETTER_AUTH_SECRET=your-super-secret-key-min-32-chars
+
+# Cloudinary Configuration
 CLOUDINARY_NAME=your cloudinary name
 CLOUDINARY_API_KEY=your cloudinary api key
 CLOUDINARY_API_SECRET=your cloudinary api secret
+
+# Legacy JWT secrets
+# Not used anymore when BetterAuth is enabled
+# Can be safely removed after full migration
+JWT_SECRET=legacy-access-token-secret
+JWT_REFRESH_SECRET=legacy-refresh-token-secret
