--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "react-redux": "^9.1.2",
+    "react-window": "^1.8.11",
     "recharts": "^3.1.2",
     "tailwind-scrollbar": "^3.1.0",
     "zod": "^4.2.1"
@@ -41,6 +42,7 @@
     "@types/node": "^22.19.1",
     "@types/react": "^18.3.27",
     "@types/react-dom": "^18.3.7",
+    "@types/react-window": "^1.8.8",
     "@types/redux": "^3.6.31",
     "@types/webpack-env": "^1.18.8",
     "@typescript-eslint/eslint-plugin": "^8.48.1",
