Checkpoint for brevo and emails

--- a/backend/env.example
+++ b/backend/env.example
@@ -16,18 +16,19 @@ DB_USER=root
 DB_PASSWORD=root
 
 # BetterAuth Secret
-# Generate a secure random string of at least 32 characters
-# Example:
-# node -e "console.log(require('crypto').randomBytes(32).toString('base64'))"
-BETTER_AUTH_SECRET=your-super-secret-key-min-32-chars
+BETTER_AUTH_SECRET=
 
 # Cloudinary Configuration
 CLOUDINARY_NAME=your cloudinary name
 CLOUDINARY_API_KEY=your cloudinary api key
 CLOUDINARY_API_SECRET=your cloudinary api secret
 
-# Legacy JWT secrets
-# Not used anymore when BetterAuth is enabled
-# Can be safely removed after full migration
-JWT_SECRET=legacy-access-token-secret
-JWT_REFRESH_SECRET=legacy-refresh-token-secret
+# Brevo SMTP Configuration
+SMTP_HOST=
+SMTP_PORT=
+SMTP_USER=
+SMTP_PASSWORD=
+
+# Optional: For the sender
+SMTP_FROM_NAME=Backups
+SMTP_FROM_EMAIL=your gmail
